tags/0.3/src/objects/DiscussionTopic__c.object
<CustomObject>
    <fields>
        <fullName>DiscussionForum__c</fullName>
        <label>Discussion Forum</label>
        <referenceTo>DiscussionForum__c</referenceTo>
        <relationshipName>DiscussionForum</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastPostedMessage__c</fullName>
        <label>LastPostedMessage</label>
        <referenceTo>DiscussionMessage__c</referenceTo>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <label>LastViewedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MessageCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MessageCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PostedBy__c</fullName>
        <label>PostedBy</label>
        <referenceTo>User</referenceTo>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostedDate__c</fullName>
        <label>PostedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stickied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stickied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Discussion Topics</relationshipLabel>
        <relationshipName>DiscussionTopics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Threaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Threaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ViewCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ViewCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Discussion Topic</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Topic Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discussion Topics</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>